changement img logo taille

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <tbody>
                             <tr>
                                 <!-- Logo d'une largeur de 100 px -->
-                                <td style="height:55px; padding-right: 40px; font-family:Calibri; vertical-align:bottom;"><img src="url/../ressources/images/Logo-SDIS79-couleur-ss-site.jpg" alt="logo sdis79" style="border-radius: 10px; height: auto; width: 100px; border: 0; min-height: 30px; min-width: 30px;">
+                                <td style="height:55px; padding-right: 40px; font-family:Calibri; vertical-align:bottom;"><img src="url/../ressources/images/Logo-SDIS79-couleur-ss-site-100x150px.jpg" alt="logo sdis79" style="border-radius: 10px; height: auto; width: 100px; border: 0; min-height: 30px; min-width: 30px;">
                                 </td>
                             </tr>
                             <tr style="padding-top: 8px;">
@@ -48,14 +48,14 @@
                                 <!-- Numéro de téléphone -->
                                 <td style="font-family: Calibri; line-height: 0; vertical-align: top; padding-left: 25px; padding-top: 15px; text-align: top;" valign="top" align="left">
                                     <span style="font-family:Calibri; font-size:15px; float: left">
-                                        <ul style="list-style-image: url(./ressources/images/favicon1.png);list-style-type: none; vertical-align: top; display:inline;" alt="puce carré">
+                                        <ul style="list-style-image: url('/ressources/images/favicon1.png');list-style-type: none; vertical-align: top; display:inline;" alt="puce carré">
                                             <span style="font-family: Calibri; font-size: 14px; text-align: top;" alt="Tel bureau + portable"></span>
                                             <li><a style="color:#21282f; vertical-align: 5px; text-decoration: none;" href="tel:+054999999999" href="tel:+33666666666">05 49 18 18 18 - 07 18 18 18 18</a></li><br>
                                         </ul>
 
 
                                         <!-- Site web -->
-                                        <ul style="list-style-image: url(./ressources/images/favicon2.png);font-family:Calibri; font-size:14px;display:inline;" alt="puce carré">
+                                        <ul style="list-style-image: url('/ressources/images/favicon2.png');font-family:Calibri; font-size:14px;display:inline;" alt="puce carré">
                                             <span style="font-family:Calibri; font-size:14px;" alt="adresse mail"></span>
                                             <li><a href="mailto:l.beteau@sdis79.fr" color="#10172b" style="text-decoration: none; color: rgb(16, 23, 43);" class="sc-gipzik iyhjGb"><span>l.beteau@sdis79.fr</span></a>
                                         </ul>
@@ -125,6 +125,4 @@
                 </td>
             </tr>
     </table>
-</body>
-
-</html>
+</body></html>
