chgt-favicon-jpg

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                                 <!-- Numéro de téléphone -->
                                 <td style="font-family: Calibri; line-height: 0; vertical-align: top; padding-left: 25px; padding-top: 15px; text-align: top;" valign="top" align="left">
                                     <span style="font-family:Calibri; font-size:15px; float: left">
-                                        <ul style="list-style-image: url('/ressources/images/favicon1.png');list-style-type: none; vertical-align: top; display:inline;" alt="puce carré">
+                                        <ul style="list-style-image: url(./ressources/images/favicon1.jpg);list-style-type: none; vertical-align: top; display:inline;" alt="puce carré">
                                             <span style="font-family: Calibri; font-size: 14px; text-align: top;" alt="Tel bureau + portable"></span>
                                             <li><a style="color:#21282f; vertical-align: 5px; text-decoration: none;" href="tel:+054999999999" href="tel:+33666666666">05 49 18 18 18 - 07 18 18 18 18</a></li><br>
                                         </ul>
 
 
                                         <!-- Site web -->
-                                        <ul style="list-style-image: url('/ressources/images/favicon2.png');font-family:Calibri; font-size:14px;display:inline;" alt="puce carré">
+                                        <ul style="list-style-image: url(./ressources/images/favicon2.jpg);font-family:Calibri; font-size:14px;display:inline;" alt="puce carré">
                                             <span style="font-family:Calibri; font-size:14px;" alt="adresse mail"></span>
                                             <li><a href="mailto:l.beteau@sdis79.fr" color="#10172b" style="text-decoration: none; color: rgb(16, 23, 43);" class="sc-gipzik iyhjGb"><span>l.beteau@sdis79.fr</span></a>
                                         </ul>
