--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <p>
                                         <span style="text-transform: uppercase; vertical-align: -6px">Service départemental d'incendie et de secours des deux-sèvres</span>
                                         <br>
-                                        <span style="text-transform: lowercase;">100 rue de la gare - CS 40019 - 79185 CHAURAY Cedex</span>
+                                        <span>100 rue de la gare - CS 40019 - 79185 CHAURAY Cedex</span>
                                     </p>
                                 </td>
                             </tr>
